Test page: use absolute production script URLs with defer and v=6

--- a/public/test-gate.html
+++ b/public/test-gate.html
@@ -65,9 +65,9 @@
   </script>
 
   <!-- Gate script with cache-busting + defer to wait DOM -->
-  <script src="/connect-gate.js?v=6" defer></script>
+  <script src="https://universal-connect.vercel.app/connect-gate.js?v=6" defer></script>
 
   <!-- Optional: widget for comparaison -->
-  <!-- <script src="/connect-widget.js?v=3" defer></script> -->
+  <!-- <script src="https://universal-connect.vercel.app/connect-widget.js?v=6" defer></script> -->
 </body>
 </html>
